--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@netlify/functions": "^1.0.0",
+    "@react-spring/three": "^9.5.2",
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.17.1",
     "@react-three/fiber": "^8.2.0",
@@ -15,9 +16,14 @@
     "@remix-run/node": "^1.6.5",
     "@remix-run/react": "^1.6.5",
     "cross-env": "^7.0.3",
+    "dat.gui": "^0.7.9",
+    "drei": "^2.2.21",
     "math": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.5.2",
+    "react-three-gui": "^0.4.2",
+    "react-use-gesture": "^9.1.3",
     "three": "^0.142.0",
     "three-stdlib": "^2.12.1"
   },
@@ -25,6 +31,7 @@
     "@remix-run/dev": "^1.6.5",
     "@remix-run/eslint-config": "^1.6.5",
     "@remix-run/serve": "^1.6.5",
+    "@types/dat.gui": "^0.7.7",
     "@types/react": "^18.0.15",
     "@types/three": "^0.142.0",
     "eslint": "^8.15.0",
